lab-settings/student-ui/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: student-ui
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: student-ui
